// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App create 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iFTqVQ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dyaQWV"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jGdUlD"
      >
        <header
          class="StyledBox-sc-13pk1d4-0 bKotyi"
        >
          <div
            class="StyledGrid-sc-1wofa1l-0 dSdlNC"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 bQdJui"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 fDeTAX"
            >
              <h1
                class="StyledHeading-sc-1rdh4aw-0 bcLsfG"
              >
                grommet designer
              </h1>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 cnqXVX"
            >
              <p
                class="StyledParagraph-sc-tbetod-0 bdmUCI"
              >
                design with grommet components
              </p>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 cfxNkE"
            >
              <a
                class="StyledButton-sc-323bzc-0 hPHkes"
                href="/_new"
                title="start a new design"
              >
                New
              </a>
            </div>
          </div>
        </header>
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 loMmax"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 gxGltT"
      >
        <span
          class="StyledText-sc-1sadyjn-0 kgTeZD"
        >
          Hi, ... maybe create a new design?
        </span>
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 loMmax"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 jGdUlD"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 eGBoBK FileInput__ContentsBox-sc-1jzq7im-0 ksrvbp"
        >
          <input
            accept=".json"
            class="StyledFileInput-sc-rl7ywv-0 cOcxEb"
            type="file"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 kQRgMj"
          >
            <span
              class="StyledText-sc-1sadyjn-0 gFlMGS FileInput__Message-sc-1jzq7im-2 dgVXWn"
            >
              Import - drop design file here
            </span>
            <a
              class="StyledAnchor-sc-1rp7lwl-0 WAeND"
              tabindex="-1"
            >
              browse
            </a>
          </div>
        </div>
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 loMmax"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 fnYgnx"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 jGdUlD"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 bTWqdO"
          >
            <h2
              class="StyledHeading-sc-1rdh4aw-0 BWkSX"
            >
              storage
            </h2>
            <div
              class="StyledBox__StyledBoxGap-sc-13pk1d4-1 brZomi"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 driArM"
            >
              <svg
                class="StyledMeter-sc-nsxarx-0 fKZMFB"
                height="24"
                preserveAspectRatio="none"
                viewBox="0 0 384 24"
                width="384"
              >
                <path
                  d="M 0,12 L 384,12"
                  fill="none"
                  stroke="#F2F2F2"
                  stroke-linecap="square"
                  stroke-opacity="0.4"
                  stroke-width="24"
                />
              </svg>
              <div
                class="StyledBox__StyledBoxGap-sc-13pk1d4-1 cXfpJS"
              />
              <span
                class="StyledText-sc-1sadyjn-0 dAFYwl"
              >
                0 K total
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 loMmax"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 jGdUlD"
      >
        <footer
          class="StyledBox-sc-13pk1d4-0 jUXmhX"
        >
          <button
            aria-label="Change settings"
            class="StyledButton-sc-323bzc-0 iWmvZQ"
            type="button"
          >
            <svg
              aria-label="Brush"
              class="StyledIcon-sc-ofa7kd-0 esOrIb"
              viewBox="0 0 24 24"
            >
              <path
                d="M9.312 11.73a5.001 5.001 0 0 0-5.362 1.12c-1.953 1.952-1.414 8.485-1.414 8.485s6.532.538 8.485-1.415a5.001 5.001 0 0 0 1.12-5.362L22.334 4.364a1.997 1.997 0 0 0 0-2.828 1.995 1.995 0 0 0-2.828 0L9.312 11.729zm1.002-1.617 1.838 1.838 1.697 1.697"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
        </footer>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App create 2`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iFTqVQ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dyaQWV"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jGdUlD"
      >
        <header
          class="StyledBox-sc-13pk1d4-0 gQkSLs"
        >
          <div
            class="StyledGrid-sc-1wofa1l-0 dSdlNC"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 bQdJui"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 fDeTAX"
            >
              <h1
                class="StyledHeading-sc-1rdh4aw-0 bcLsfG"
              >
                new design
              </h1>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 cnqXVX"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 cfxNkE"
            >
              <button
                aria-label="cancel creating a new design"
                class="StyledButton-sc-323bzc-0 iDVCLY"
                type="button"
              >
                <svg
                  aria-label="Close"
                  class="StyledIcon-sc-ofa7kd-0 esOrIb"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="m3 3 18 18M3 21 21 3"
                    fill="none"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </button>
            </div>
          </div>
        </header>
        <form>
          <div
            class="StyledBox-sc-13pk1d4-0 fWOnXx FormField__FormFieldBox-sc-m9hood-0 dzyyoR"
          >
            <label
              class="StyledText-sc-1sadyjn-0 fwprCC"
              for="name"
            >
              name
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 itdLCv FormField__FormFieldContentBox-sc-m9hood-1 eJdCGM"
            >
              <div
                class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 lapBso"
              >
                <input
                  autocomplete="off"
                  class="StyledTextInput-sc-1x30a0s-0 eVKYQY"
                  id="name"
                  name="name"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 kxXrY"
            id="startWith"
            role="radiogroup"
          >
            <label
              class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 kvcyRi"
              for="startWith-start with a blank design"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 khuNVg StyledRadioButton-sc-g1f6ld-5 dhbLDK"
              >
                <input
                  checked=""
                  class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 cqFPym"
                  id="startWith-start with a blank design"
                  name="startWith"
                  tabindex="0"
                  type="radio"
                  value="start with a blank design"
                />
                <div
                  class="StyledBox-sc-13pk1d4-0 isDyTi StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cXaHal"
                >
                  <svg
                    class="StyledRadioButton__StyledRadioButtonIcon-sc-g1f6ld-3 kPvJIY"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 24 24"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="6"
                    />
                  </svg>
                </div>
              </div>
              <span
                class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
              >
                start with a blank design
              </span>
            </label>
            <div
              class="StyledBox__StyledBoxGap-sc-13pk1d4-1 cXfpJS"
            />
            <label
              class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 kvcyRi"
              for="startWith-duplicate an existing design"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 khuNVg StyledRadioButton-sc-g1f6ld-5 dhbLDK"
              >
                <input
                  class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 cqFPym"
                  id="startWith-duplicate an existing design"
                  name="startWith"
                  tabindex="-1"
                  type="radio"
                  value="duplicate an existing design"
                />
                <div
                  class="StyledBox-sc-13pk1d4-0 fSPuou StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cXaHal"
                />
              </div>
              <span
                class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
              >
                duplicate an existing design
              </span>
            </label>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 fWOnXx FormField__FormFieldBox-sc-m9hood-0 dzyyoR"
          >
            <label
              class="StyledText-sc-1sadyjn-0 fwprCC"
            >
              theme
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 coOpsm FormField__FormFieldContentBox-sc-m9hood-1"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 fdOFiM"
                role="radiogroup"
              >
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 kvcyRi"
                  for="grommet"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 khuNVg StyledRadioButton-sc-g1f6ld-5 dhbLDK"
                  >
                    <input
                      checked=""
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 cqFPym"
                      id="grommet"
                      name="theme"
                      tabindex="0"
                      type="radio"
                      value="grommet"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 isDyTi StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cXaHal"
                    >
                      <svg
                        class="StyledRadioButton__StyledRadioButtonIcon-sc-g1f6ld-3 kPvJIY"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 24 24"
                      >
                        <circle
                          cx="12"
                          cy="12"
                          r="6"
                        />
                      </svg>
                    </div>
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    grommet
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 cXfpJS"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 kvcyRi"
                  for="hpe"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 khuNVg StyledRadioButton-sc-g1f6ld-5 dhbLDK"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 cqFPym"
                      id="hpe"
                      name="theme"
                      tabindex="-1"
                      type="radio"
                      value="hpe"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 fSPuou StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cXaHal"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    hpe
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 cXfpJS"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 kvcyRi"
                  for="other"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 khuNVg StyledRadioButton-sc-g1f6ld-5 dhbLDK"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 cqFPym"
                      id="other"
                      name="theme"
                      tabindex="-1"
                      type="radio"
                      value="other"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 fSPuou StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cXaHal"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    other
                  </span>
                </label>
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 fWOnXx FormField__FormFieldBox-sc-m9hood-0 dzyyoR"
          >
            <label
              class="StyledText-sc-1sadyjn-0 fwprCC"
              for="includes"
            >
              include other designs to be able to copy their components
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 itdLCv FormField__FormFieldContentBox-sc-m9hood-1"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-label="none"
                class="StyledButton-sc-323bzc-0 ktRsf StyledSelect__StyledSelectDropButton-sc-znp66n-5 joBOeH"
                type="button"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 fgUUJw"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 cPWxxy"
                  >
                    <div
                      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 lapBso"
                    >
                      <input
                        autocomplete="off"
                        class="StyledTextInput-sc-1x30a0s-0 lhKyhX StyledSelect__SelectTextInput-sc-znp66n-4 jKHzHx"
                        name="includes"
                        placeholder="none"
                        readonly=""
                        tabindex="-1"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class="StyledBox-sc-13pk1d4-0 dKYJwv"
                    style="min-width: auto;"
                  >
                    <svg
                      aria-label="FormDown"
                      class="StyledIcon-sc-ofa7kd-0 gkhugb"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="m18 9-6 6-6-6"
                        fill="none"
                        stroke="#000"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <footer
            class="StyledBox-sc-13pk1d4-0 lfEfhj"
          >
            <button
              class="StyledButton-sc-323bzc-0 hPHkes"
              title="create design"
              type="submit"
            >
              Create Design
            </button>
          </footer>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App create 3`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iFTqVQ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dyaQWV"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jGdUlD"
      >
        <header
          class="StyledBox-sc-13pk1d4-0 gQkSLs"
        >
          <div
            class="StyledGrid-sc-1wofa1l-0 dSdlNC"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 bQdJui"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 fDeTAX"
            >
              <h1
                class="StyledHeading-sc-1rdh4aw-0 bcLsfG"
              >
                new design
              </h1>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 cnqXVX"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 cfxNkE"
            >
              <button
                aria-label="cancel creating a new design"
                class="StyledButton-sc-323bzc-0 iDVCLY"
                type="button"
              >
                <svg
                  aria-label="Close"
                  class="StyledIcon-sc-ofa7kd-0 esOrIb"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="m3 3 18 18M3 21 21 3"
                    fill="none"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </button>
            </div>
          </div>
        </header>
        <form>
          <div
            class="StyledBox-sc-13pk1d4-0 fWOnXx FormField__FormFieldBox-sc-m9hood-0 dzyyoR"
          >
            <label
              class="StyledText-sc-1sadyjn-0 fwprCC"
              for="name"
            >
              name
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 itdLCv FormField__FormFieldContentBox-sc-m9hood-1 eJdCGM"
            >
              <div
                class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 lapBso"
              >
                <input
                  autocomplete="off"
                  class="StyledTextInput-sc-1x30a0s-0 eVKYQY"
                  id="name"
                  name="name"
                  value="test design"
                />
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 kxXrY"
            id="startWith"
            role="radiogroup"
          >
            <label
              class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 kvcyRi"
              for="startWith-start with a blank design"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 khuNVg StyledRadioButton-sc-g1f6ld-5 dhbLDK"
              >
                <input
                  checked=""
                  class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 cqFPym"
                  id="startWith-start with a blank design"
                  name="startWith"
                  tabindex="0"
                  type="radio"
                  value="start with a blank design"
                />
                <div
                  class="StyledBox-sc-13pk1d4-0 isDyTi StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cXaHal"
                >
                  <svg
                    class="StyledRadioButton__StyledRadioButtonIcon-sc-g1f6ld-3 kPvJIY"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 24 24"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="6"
                    />
                  </svg>
                </div>
              </div>
              <span
                class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
              >
                start with a blank design
              </span>
            </label>
            <div
              class="StyledBox__StyledBoxGap-sc-13pk1d4-1 cXfpJS"
            />
            <label
              class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 kvcyRi"
              for="startWith-duplicate an existing design"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 khuNVg StyledRadioButton-sc-g1f6ld-5 dhbLDK"
              >
                <input
                  class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 cqFPym"
                  id="startWith-duplicate an existing design"
                  name="startWith"
                  tabindex="-1"
                  type="radio"
                  value="duplicate an existing design"
                />
                <div
                  class="StyledBox-sc-13pk1d4-0 fSPuou StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cXaHal"
                />
              </div>
              <span
                class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
              >
                duplicate an existing design
              </span>
            </label>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 fWOnXx FormField__FormFieldBox-sc-m9hood-0 dzyyoR"
          >
            <label
              class="StyledText-sc-1sadyjn-0 fwprCC"
            >
              theme
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 coOpsm FormField__FormFieldContentBox-sc-m9hood-1"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 fdOFiM"
                role="radiogroup"
              >
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 kvcyRi"
                  for="grommet"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 khuNVg StyledRadioButton-sc-g1f6ld-5 dhbLDK"
                  >
                    <input
                      checked=""
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 cqFPym"
                      id="grommet"
                      name="theme"
                      tabindex="0"
                      type="radio"
                      value="grommet"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 isDyTi StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cXaHal"
                    >
                      <svg
                        class="StyledRadioButton__StyledRadioButtonIcon-sc-g1f6ld-3 kPvJIY"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 24 24"
                      >
                        <circle
                          cx="12"
                          cy="12"
                          r="6"
                        />
                      </svg>
                    </div>
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    grommet
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 cXfpJS"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 kvcyRi"
                  for="hpe"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 khuNVg StyledRadioButton-sc-g1f6ld-5 dhbLDK"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 cqFPym"
                      id="hpe"
                      name="theme"
                      tabindex="-1"
                      type="radio"
                      value="hpe"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 fSPuou StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cXaHal"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    hpe
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 cXfpJS"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 kvcyRi"
                  for="other"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 khuNVg StyledRadioButton-sc-g1f6ld-5 dhbLDK"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 cqFPym"
                      id="other"
                      name="theme"
                      tabindex="-1"
                      type="radio"
                      value="other"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 fSPuou StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cXaHal"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    other
                  </span>
                </label>
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 fWOnXx FormField__FormFieldBox-sc-m9hood-0 dzyyoR"
          >
            <label
              class="StyledText-sc-1sadyjn-0 fwprCC"
              for="includes"
            >
              include other designs to be able to copy their components
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 itdLCv FormField__FormFieldContentBox-sc-m9hood-1"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-label="none"
                class="StyledButton-sc-323bzc-0 ktRsf StyledSelect__StyledSelectDropButton-sc-znp66n-5 joBOeH"
                type="button"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 fgUUJw"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 cPWxxy"
                  >
                    <div
                      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 lapBso"
                    >
                      <input
                        autocomplete="off"
                        class="StyledTextInput-sc-1x30a0s-0 lhKyhX StyledSelect__SelectTextInput-sc-znp66n-4 jKHzHx"
                        name="includes"
                        placeholder="none"
                        readonly=""
                        tabindex="-1"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class="StyledBox-sc-13pk1d4-0 dKYJwv"
                    style="min-width: auto;"
                  >
                    <svg
                      aria-label="FormDown"
                      class="StyledIcon-sc-ofa7kd-0 gkhugb"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="m18 9-6 6-6-6"
                        fill="none"
                        stroke="#000"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <footer
            class="StyledBox-sc-13pk1d4-0 lfEfhj"
          >
            <button
              class="StyledButton-sc-323bzc-0 hPHkes"
              title="create design"
              type="submit"
            >
              Create Design
            </button>
          </footer>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App create 4`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iFTqVQ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 kaGDvX"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dYKUNE"
      >
        <form>
          <div
            class="StyledBox-sc-13pk1d4-0 fWOnXx FormField__FormFieldBox-sc-m9hood-0 dzyyoR"
          >
            <label
              class="StyledText-sc-1sadyjn-0 fwprCC"
              for="template"
            >
              screen template
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 itdLCv FormField__FormFieldContentBox-sc-m9hood-1"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-label="Open Drop; Selected: [object Object]"
                class="StyledButton-sc-323bzc-0 ktRsf StyledSelect__StyledSelectDropButton-sc-znp66n-5 joBOeH"
                id="template"
                type="button"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 fgUUJw"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 cPWxxy"
                  >
                    <div
                      class="StyledBox-sc-13pk1d4-0 gwCcEx"
                    >
                      <span
                        class="StyledText-sc-1sadyjn-0 ZnZrv"
                      >
                        empty page
                      </span>
                      <div
                        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 cXfpJS"
                      />
                      <span
                        class="StyledText-sc-1sadyjn-0 gizbPy"
                      >
                        generic
                      </span>
                    </div>
                    <input
                      class="StyledSelect__HiddenInput-sc-znp66n-2 faKgaY"
                      id="template__input"
                      name="template"
                      readonly=""
                      type="text"
                    />
                  </div>
                  <div
                    class="StyledBox-sc-13pk1d4-0 dKYJwv"
                    style="min-width: auto;"
                  >
                    <svg
                      aria-label="FormDown"
                      class="StyledIcon-sc-ofa7kd-0 gkhugb"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="m18 9-6 6-6-6"
                        fill="none"
                        stroke="#000"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <footer
            class="StyledBox-sc-13pk1d4-0 bFeUws"
          >
            <button
              class="StyledButton-sc-323bzc-0 hPHkes"
              title="Use selected screen template"
              type="submit"
            >
              Use Template
            </button>
          </footer>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App create 5`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iFTqVQ"
  >
    <div
      class="StyledGrommet-sc-19lkkz7-0 eLvOnA"
      id="designer-canvas"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 CLPRP"
        id="2"
        style="outline: 1px dashed red;"
        tabindex="-1"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 eovqjz"
          id="3"
          tabindex="-1"
        >
          <div
            class="sc-gJhJTp fpyBPX"
          >
            <p
              class="StyledParagraph-sc-tbetod-0 jAPoTf"
            >
              This PageContent is currently empty. Add some content to it.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
